--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "prebuild": "cd src/plugins/jagraj-todo && npm run build"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.16.0",
