--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry",
-    "prebuild": "cd src/plugins/jagraj-todo && npm run build"
+    "prebuild": "cd src/plugins/jagraj-todo && npm install && npm run build"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.16.0",
