Plugin installtion issue fixes AI

--- a/src/plugins/jagraj-todo/package.json
+++ b/src/plugins/jagraj-todo/package.json
@@ -23,10 +23,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "strapi-plugin build",
-    "watch": "strapi-plugin watch",
-    "watch:link": "strapi-plugin watch:link",
-    "verify": "strapi-plugin verify",
+    "build": "npm run build:admin && npm run build:server",
+    "build:admin": "npx @strapi/sdk-plugin build --admin",
+    "build:server": "npx @strapi/sdk-plugin build --server",
+    "watch": "npx @strapi/sdk-plugin watch",
+    "watch:link": "npx @strapi/sdk-plugin watch:link",
+    "verify": "npx @strapi/sdk-plugin verify",
     "test:ts:front": "run -T tsc -p admin/tsconfig.json",
     "test:ts:back": "run -T tsc -p server/tsconfig.json"
   },
