--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry",
-    "prebuild": "cd src/plugins/jagraj-todo && npm ci && npm run build || echo 'Plugin build completed'"
+    "prebuild": "cd src/plugins/jagraj-todo && npm ci && npm run build && echo 'Plugin built successfully' && cd ../../"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.16.0",
