--- a/src/plugins/jagraj-todo/package.json
+++ b/src/plugins/jagraj-todo/package.json
@@ -24,8 +24,8 @@
   ],
   "scripts": {
     "build": "npm run build:admin && npm run build:server",
-    "build:admin": "npx @strapi/sdk-plugin build --admin",
-    "build:server": "npx @strapi/sdk-plugin build --server",
+    "build:admin": "tsc -p admin/tsconfig.json",
+    "build:server": "tsc -p server/tsconfig.json",
     "watch": "npx @strapi/sdk-plugin watch",
     "watch:link": "npx @strapi/sdk-plugin watch:link",
     "verify": "npx @strapi/sdk-plugin verify",
