--- a/src/plugins/jagraj-todo/package.json
+++ b/src/plugins/jagraj-todo/package.json
@@ -23,12 +23,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run build:admin && npm run build:server",
-    "build:admin": "tsc -p admin/tsconfig.json",
-    "build:server": "tsc -p server/tsconfig.json",
-    "watch": "npx @strapi/sdk-plugin watch",
-    "watch:link": "npx @strapi/sdk-plugin watch:link",
-    "verify": "npx @strapi/sdk-plugin verify",
+    "build": "npx strapi-plugin build",
+    "watch": "npx strapi-plugin watch",
+    "watch:link": "npx strapi-plugin watch:link",
+    "verify": "npx strapi-plugin verify",
     "test:ts:front": "run -T tsc -p admin/tsconfig.json",
     "test:ts:back": "run -T tsc -p server/tsconfig.json"
   },
