--- a/src/plugins/jagraj-todo/package.json
+++ b/src/plugins/jagraj-todo/package.json
@@ -23,21 +23,24 @@
     "dist"
   ],
   "scripts": {
-    "build": "npx strapi-plugin build",
-    "watch": "npx strapi-plugin watch",
-    "watch:link": "npx strapi-plugin watch:link",
-    "verify": "npx strapi-plugin verify",
+    "build": "npx @strapi/sdk-plugin build || npm run build:fallback",
+    "build:fallback": "npm run build:admin && npm run build:server",
+    "build:admin": "tsc -p admin/tsconfig.json",
+    "build:server": "tsc -p server/tsconfig.json",
+    "watch": "npx @strapi/sdk-plugin watch",
+    "watch:link": "npx @strapi/sdk-plugin watch:link",
+    "verify": "npx @strapi/sdk-plugin verify",
     "test:ts:front": "run -T tsc -p admin/tsconfig.json",
     "test:ts:back": "run -T tsc -p server/tsconfig.json"
   },
   "dependencies": {
     "@strapi/design-system": "^2.0.0-rc.29",
     "@strapi/icons": "^2.0.0-rc.29",
+    "@strapi/sdk-plugin": "^5.3.2",
     "react-intl": "^7.1.11"
   },
   "devDependencies": {
     "@strapi/strapi": "^5.21.0",
-    "@strapi/sdk-plugin": "^5.3.2",
     "prettier": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
